# src/models/organization.go
@@ -1,0 +1,10 @@
+package models
+
+type Organization struct {
+	Base
+	Name string `gorm:"uniqueIndex;not null"`
+}
+
+func (Organization) TableName() string {
+	return "auth.organizations"
+}
